force-app/main/default/objects/ADD_Product_Action__c/ADD_Product_Action__c.object-meta.xml
<CustomObject>
    <label>ADD Product Action</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ADD Product Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ADD Product Action</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>