force-app/main/default/objects/ADD_Product_Action__c/fields/ADD_Product__c.field-meta.xml
<CustomField>
    <fullName>ADD_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ADD Product</label>
    <referenceTo>ADD_Product__c</referenceTo>
    <relationshipLabel>ADD Product Action</relationshipLabel>
    <relationshipName>ADD_Product_Action</relationshipName>
    <type>Lookup</type>
</CustomField>