force-app/main/default/objects/ADD_Product_Action__c/fields/ADD_Product_Rule__c.field-meta.xml
<CustomField>
    <fullName>ADD_Product_Rule__c</fullName>
    <label>ADD Product Rule</label>
    <referenceTo>ADD_Product_Rule__c</referenceTo>
    <relationshipLabel>ADD Product Action</relationshipLabel>
    <relationshipName>ADD_Product_Action</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>